Fix main content alignment

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@
   padding: 0px 400px;
   background-color:rgba(216, 198, 198, 0.328);
   box-shadow: 0 4px 4px 0 rgb(60 64 67 / 30%), 0 8px 12px 6px rgb(60 64 67 / 15%);
+  max-height: 80px;
   }
 
   .title {
@@ -42,16 +43,17 @@
   .main {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  padding: 30px 0;
+  padding: 0;
+  margin: auto;
   flex: 1;
   }
 
   .grid {
   display: grid;
-  width: 600px;
-  height: 600px;
+  width: 650px;
+  height: 650px;
   background-color: #fefefe;
   box-shadow: rgba(0, 0, 0, 0.24) 1px 3px 8px;
   }
